--- a/trunk/WIP/Sources/Backend/TaxiNet/src/main/webapp/Login.xhtml
+++ b/trunk/WIP/Sources/Backend/TaxiNet/src/main/webapp/Login.xhtml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
    xmlns:f="http://java.sun.com/jsf/core"
    xmlns:ui="http://java.sun.com/jsf/facelets"    
-   xmlns:h="http://java.sun.com/jsf/html">
+   xmlns:h="http://java.sun.com/jsf/html"
+   xmlns:p="http://primefaces.org/ui">
  
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"/>
@@ -15,15 +14,15 @@
 <table> 
 	 <tr><td colspan="2"><h:messages errorClass="errorMessage" /></td></tr>
 	
-	<tr><td><h:outputLabel value="#{msg['login.userName']}" /></td>	
-		<td> <h:inputText size="50" value="#{loginForm.userName}"  id="userName"
+	<tr><td><p:outputLabel value="#{msg['login.userName']}" /></td>	
+		<td> <p:inputText size="50" value="#{loginForm.userName}"  id="userName"
 		 		required="true" requiredMessage="#{msg['login.username.error']}"/>
 		  <h:message for="userName" serrorClass="errorMessage" /></td></tr>
-	<tr><td><h:outputLabel value="#{msg['login.password']}" /></td>
-			<td><h:inputText size="50" value="#{loginForm.password}" id="password" 
+	<tr><td><p:outputLabel value="#{msg['login.password']}" /></td>
+			<td><p:inputText size="50" value="#{loginForm.password}" id="password" 
 		required="true" requiredMessage="#{msg['login.password.error']}"/>
 		<h:message for="password" errorClass="errorMessage" /></td></tr>			
-	<tr><td><h:commandButton value="Login" type="submit" action="#{loginForm.logon}" /></td>
+	<tr><td><p:commandButton value="Login" type="submit" action="#{loginForm.logon}" /></td>
 		<td></td>
 	</tr>
 	</table>
