--- a/WIP/Sources/Backend/TaxiNet/src/main/webapp/Login.xhtml
+++ b/WIP/Sources/Backend/TaxiNet/src/main/webapp/Login.xhtml
@@ -5,10 +5,10 @@
    xmlns:h="http://java.sun.com/jsf/html"
    xmlns:p="http://primefaces.org/ui">
  
-<head>
+<h:head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"/>
 <title>Insert title here</title>
-</head>
+</h:head>
 <body>
 <h:form>
 <table> 
