--- a/trunk/WIP/Sources/Backend/TaxiNet/src/main/webapp/xhtml/rider/DangKiKhachHang.xhtml
+++ b/trunk/WIP/Sources/Backend/TaxiNet/src/main/webapp/xhtml/rider/DangKiKhachHang.xhtml
@@ -9,6 +9,7 @@
 	<f:metadata>
 		<f:event listener="#{driverRegisterController.init}" type="preRenderView" />
 	</f:metadata>
+	<title>TaxiNet</title>
 </h:head>
 <h:body>
 	<f:view>
@@ -18,7 +19,7 @@
 				<p:messages showDetail="true" showSummary="true" autoUpdate="true"></p:messages>
 				<p:panel header="ĐĂNG KÍ TÀI KHOẢN">
 					<h4>TÀI KHOẢN</h4>
-					<h:panelGrid id="register" columns="3">
+					<h:panelGrid id="register" columns="1">
 						<p:outputLabel for="email" value="#{msg['riderRegister.email']}" />
 						<p:inputText id="email" required="true"
 							requiredMessage="Email không hợp lệ"
