--- a/trunk/WIP/Sources/Backend/TaxiNet/src/main/webapp/xhtml/feeagent/DaiLy-Home.xhtml
+++ b/trunk/WIP/Sources/Backend/TaxiNet/src/main/webapp/xhtml/feeagent/DaiLy-Home.xhtml
@@ -14,22 +14,22 @@
 </h:head>
 <h:body>
 	<p:megaMenu orientation="horizontal">
-		<p:menuitem value="Home" url="../feeagent/DaiLy-Home.xhtml"
+		<p:menuitem value="#{msg['feeAgent.homePage']}" url="../feeagent/DaiLy-Home.xhtml"
 			style="background:orange"></p:menuitem>
-		<p:menuitem value="Lịch sử giao dịch"
+		<p:menuitem value="#{msg['feeAgent.transactionHistory']}"
 			url="../feeagent/DaiLy-LichSuGiaoDich.xhtml"></p:menuitem>
 	</p:megaMenu>
 	<h:panelGrid columns="2">
-		<p:outputLabel for="accountName" value="Tài khoản đăng nhập" />
+		<p:outputLabel for="accountName" value="#{msg['feeAgent.account']}" />
 		<p:inputText id="accountName"
 			value="#{feeAgentHomeController.accountSearchName}" />
-		<p:outputLabel for="userName" value="Tên khách hàng/doanh nghiệp" />
+		<p:outputLabel for="userName" value="#{msg['feeAgent.customerName']}" />
 		<p:inputText id="userName"
 			value="#{feeAgentHomeController.userSearchName}" />
 	</h:panelGrid>
 	<br />
 	<center>
-		<p:commandButton value="Tìm kiếm"
+		<p:commandButton value="#{msg['feeAgent.search']}"
 			actionListener="#{feeAgentHomeController.doSearchAllUser}"
 			update="account-list"></p:commandButton>
 	</center>
@@ -39,40 +39,39 @@
 		paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink}">
 		<p:column headerText="STT" style="text-align:left" width="35">
 		</p:column>
-		<p:column headerText="Tài khoản đăng nhập" style="text-align:left">
+		<p:column headerText="#{msg['feeAgent.account']}" style="text-align:left">
 		</p:column>
-		<p:column headerText="Tên khách hàng/doanh nghiệp"
+		<p:column headerText="#{msg['feeAgent.customerName']}"
 			style="text-align:left">
 		</p:column>
-		<p:column headerText="Địa chỉ" style="text-align:left">
+		<p:column headerText="#{msg['feeAgent.address']}" style="text-align:left">
 		</p:column>
-		<p:column headerText="Số điện thoại" style="text-align:left">
+		<p:column headerText="#{msg['riderRegister.phoneNo']}" style="text-align:left">
 		</p:column>
-		<p:column headerText="Tác vụ" style="text-align:left">
+		<p:column headerText="#{msg['feeAgent.task']}" style="text-align:left">
 		</p:column>
 	</p:dataTable>
 
 	<!-- dialog for charge  -->
 	<p:dialog widgetVar="charge-dialog" resizable="false" modal="true"
-		header="Nạp tiền tài khoản cho khách hàng">
+		header="#{msg['feeAgent.depositHeader']}">
 		<h:panelGrid columns="2">
-			<p:outputLabel for="dialog-username" value="Tên khách hàng" />
-			<p:inputText id="dialog-username" readonly="true" />
-			<p:outputLabel for="dialog-accountname"
-				value="Tên tài khoản đăng nhập" />
+			<p:outputLabel for="dialog-accountname" value="#{msg['feeAgent.account']}" />
 			<p:inputText id="dialog-accountname" readonly="true" />
-			<p:outputLabel for="dialog-address" value="Địa chỉ" />
+			<p:outputLabel for="dialog-username" value="#{msg['feeAgent.customerName']}" />
+			<p:inputText id="dialog-username" readonly="true" />
+			<p:outputLabel for="dialog-address" value="#{msg['feeAgent.address']}" />
 			<p:inputText id="dialog-address" readonly="true" />
-			<p:outputLabel for="dialog-phoneno" value="Số điện thoại" />
+			<p:outputLabel for="dialog-phoneno" value="#{msg['riderRegister.phoneNo']}" />
 			<p:inputText id="dialog-phoneno" readonly="true" />
-			<p:outputLabel for="dialog-balance" value="Số dư hiện tại" />
+			<p:outputLabel for="dialog-balance" value="#{msg['feeAgent.balance']}" />
 			<p:inputText id="dialog-balance" readonly="true" />
-			<p:outputLabel for="dialog-staff" value="Nhân viên thu ngân" />
+			<p:outputLabel for="dialog-staff" value="#{msg['feeAgent.cashier']}" />
 			<p:inputText id="dialog-staff" readonly="true" />
-			<p:outputLabel for="dialog-charge-fee" value="Số tiền nạp" />
+			<p:outputLabel for="dialog-charge-fee" value="#{msg['feeAgent.depositAmount']}" />
 			<p:inputText id="dialog-charge-fee" />
-			<p:commandButton value="Xác nhận" actionListener="#{feeAgentHomeController.doChargeFeeForSelectedUser}"></p:commandButton>
-			<p:commandButton value="Thoát" />
+			<p:commandButton value="#{msg['feeAgent.confirm']}" actionListener="#{feeAgentHomeController.doChargeFeeForSelectedUser}"></p:commandButton>
+			<p:commandButton value="#{msg['feeAgent.cancel']}" />
 		</h:panelGrid>
 	</p:dialog>
 	<!-- @author Duong -->
