--- a/WIP/Sources/Backend/TaxiNet/src/main/webapp/xhtml/home.xhtml
+++ b/WIP/Sources/Backend/TaxiNet/src/main/webapp/xhtml/home.xhtml
@@ -12,7 +12,7 @@
    	<tr>
    		<td></td>
    		<td></td>
-   		<td><a href="../Login.xhtml">Login</a>#{userData.userName}</td>
+   		<td><a href="././Login.xhtml">Login</a>#{userData.userName}</td>
    	</tr>
    	<tr>
    		<td>Body</td>
